--- a/css/framework.css
+++ b/css/framework.css
@@ -40,9 +40,10 @@ blockquote{padding:10px; background:#ccc; font-size:14px;}
 
 /* @end */
 
-/* @group Unordered Lists */
+/* @group Lists */
 
 ul li, ol li{margin:0 0 10px 15px;}
+ul ul, ol ol{margin:10px 0 0 0;}
 
 /* @end */
 
@@ -82,5 +83,11 @@ nav li{list-style:none; display:inline; margin:0 10px 10px 0;}
 /* @group Table */
 
 table th, table td{padding:5px;}
+
+/* @end */
+
+/* @group Forms */
+
+form input, form label{display:inline; vertical-align:middle;}
 
 /* @end */
