--- a/css/style.css
+++ b/css/style.css
@@ -35,15 +35,14 @@ time, mark, audio, video {
   background:transparent;
 }                  
 
-article, aside, figure, footer, header, 
-hgroup, nav, section { display:block; }
+article, aside, figure, footer, header, hgroup, nav, section { display:block; }
+mark, rp, rt, ruby, summary, time{ display: inline }
 
 nav ul { list-style:none; }
 
 blockquote, q { quotes:none; }
 
-blockquote:before, blockquote:after,
-q:before, q:after { content:''; content:none; }
+blockquote:before, blockquote:after, q:before, q:after { content:''; content:none; }
 
 a { margin:0; padding:0; font-size:100%; vertical-align:baseline; background:transparent; }
 
@@ -72,7 +71,7 @@ There are two custom edits:
  * make the line-height relative and unit-less
  * remove the pre,code styles as we use a recommendation from Eric Meyer instead
 */
-body { font:13px arial,helvetica,"Nimbus Sans L", "Bitstream Vera Sans", sans-serif; *font-size:small; *font:x-small; line-height:1.22; }
+body { font:12px arial,helvetica,"Nimbus Sans L", "Bitstream Vera Sans", sans-serif; *font-size:small; *font:x-small; line-height:1.22; }
 
 table { font-size:inherit; font:100%; }
 
@@ -106,10 +105,6 @@ html { -webkit-font-smoothing: antialiased; }
  
 /* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
 a:hover, a:active { outline: none; }
-
-a, a:active, a:visited { color:#607890; }
-a:hover { color:#036; }
-
 
 ul { margin-left:30px; }
 ol { margin-left:30px; list-style-type: decimal; }
