Ems in font sizes + Media query mixin

--- a/source/assets/sass/patterns/_base.scss
+++ b/source/assets/sass/patterns/_base.scss
@@ -1,5 +1,9 @@
 html{
-  font: $base-font-size/#{$base-line-height} $base-font-family;
+  font: $base-font-size-em/#{$base-line-height} $base-font-family;
   color: $base-color;
   overflow-y:scroll;
+}
+
+body{
+	font-size: 100%;
 }
