--- a/source/tables.html.erb
+++ b/source/tables.html.erb
@@ -30,3 +30,58 @@ title: Table
     </tr>
   </tbody>
 </table>
+
+<table class="table-bordered">
+  <thead class="table-dark">
+    <tr>
+      <th>Heading</th>
+      <th>Heading</th>
+      <th>Heading</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Body</td>
+      <td>Body</td>
+      <td>Body</td>
+    </tr>
+    <tr>
+      <td>Body</td>
+      <td>Body</td>
+      <td>Body</td>
+    </tr>
+    <tr>
+      <td>Body</td>
+      <td>Body</td>
+      <td>Body</td>
+    </tr>
+  </tbody>
+</table>
+
+
+<table class="table-rounded">
+  <thead class="table-dark">
+    <tr>
+      <th>Heading</th>
+      <th>Heading</th>
+      <th>Heading</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Body</td>
+      <td>Body</td>
+      <td>Body</td>
+    </tr>
+    <tr>
+      <td>Body</td>
+      <td>Body</td>
+      <td>Body</td>
+    </tr>
+    <tr>
+      <td>Body</td>
+      <td>Body</td>
+      <td>Body</td>
+    </tr>
+  </tbody>
+</table>
