--- a/source/typography.html.erb
+++ b/source/typography.html.erb
@@ -1,8 +1,20 @@
-<h2>General Typography</h2>
+<h1>Better Typography/Spacing</h1>
 
 
 <% 6.times do |i| %>
-  <h<%= i+1 %>>h<%= i+1 %>. This is a header.</h<%= i+1 %>>
+  <h<%= i+1 %>>Header <%= i+1 %>. This is a header.</h<%= i+1 %>>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <% end %>
 
 <p>This is a paragraph. Paragraphs are preset with a font size, line height and spacing to match the overall vertical rhythm. To show what a paragraph looks like this needs a little more content so, let's see… did you know that there are storms occurring on Jupiter that are larger than the Earth? That's pretty cool.</p>
