--- a/source/assets/sass/patterns/_table.scss
+++ b/source/assets/sass/patterns/_table.scss
@@ -1,7 +1,8 @@
 table{
   width:100%;
   text-align:left;
-  margin:0 0 $base-margin 0;    
+  margin:0 0 $base-margin 0;
+  border-collapse: collapse;    
 } 
 
 td, th{
@@ -9,7 +10,11 @@ td, th{
 }
 
 tbody td, thead th, tbody th{
-  border-bottom:1px $table-cell-border-color solid;
+  border-top:1px $table-cell-border-color solid;
+}
+
+thead th{
+	border-top: none;
 }
 
 tr:hover td, tr:hover tbody > th{
@@ -20,4 +25,27 @@ tr:hover td, tr:hover tbody > th{
 
 tbody tr:nth-child(odd){
   background:$table-zebra-color;
+}
+
+// Bordered Table
+
+.table-bordered{
+	border: 1px $table-cell-border-color solid;
+	border-collapse: collapse;
+}
+
+// Dark Table 
+
+.table-dark{
+	background: #333;
+	color: #fff;
+	border: 1px #333 solid;
+}
+
+// Rounded Table
+
+.table-rounded{
+	border-collapse: separate;
+	border: 1px $table-cell-border-color solid;
+	@include border-radius();
 }
