--- a/source/assets/sass/patterns/_typography.scss
+++ b/source/assets/sass/patterns/_typography.scss
@@ -1,9 +1,16 @@
 /* Headings */
 
 h1, h2, h3, h4, h5, h6{
-  margin:0 0 ms(1) 0;
+  margin:0 0 0.5em 0;
   font-family: $base-font-family;
   font-weight: $header-font-weight;
+  line-height:1.2;
+}
+
+p{
+  &+h1, &+h2, &+h3, &+h4, &+h5, &+h6{
+    padding-top:$base-margin/2;
+  }
 }
 
 h6{
@@ -33,5 +40,5 @@ h1{
 /* Paragraph */
 
 p{
-  margin:0 0 ms(1) 0;
+  margin:0 0 $base-margin 0;
 }
