--- a/source/lists.html.erb
+++ b/source/lists.html.erb
@@ -11,10 +11,17 @@ title: Lists
   <li>List item 2</li>
   <li>List item 3
     <ul>
-      <li>List item 3</li>
-      <li>List item 3</li>
-      <li>List item 3</li>
-      <li>List item 3</li>
+      <li>List item 3.1</li>
+      <li>List item 3.2
+        <ul>
+          <li>List item 3.2.1</li>
+          <li>List item 3.2.2</li>
+          <li>List item 3.2.3</li>
+          <li>List item 3.2.4</li>
+        </ul>
+      </li>
+      <li>List item 3.3</li>
+      <li>List item 3.4</li>
     </ul>
   </li>
   <li>List item 4</li>
