--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -76,7 +76,7 @@
     </div>
   </div>
 
-  <div class="row row-pad row-demo row-nested-demo">
+  <div class="row row-pad row-demo">
     <div class="columns eight">
       <p>An eight column grid with a four/eight column grid inside</p>
       <div class="row row-pad">
