Added Mediaqueries pattern

--- a/source/assets/sass/main.scss
+++ b/source/assets/sass/main.scss
@@ -31,3 +31,7 @@ $legacy-support-for-mozilla: false;
 // Site Specific
 
 @import "site/site";
+
+// Include Media Queries
+
+@import "patterns/mediaqueries";
