--- a/source/assets/sass/patterns/_grids.scss
+++ b/source/assets/sass/patterns/_grids.scss
@@ -1,34 +1,23 @@
-@mixin generateColumnWidth ($i){
-	width: 1% * $column-width * $i;		
-}
-
-@mixin generateBoxSizing(){
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	*behavior: url(css/boxsizing.htc)
-}
-
-.row { 	
-	max-width: $site-width; 
-	min-width: $min-site-width; 
-	width: $max-site-width; 
-	margin: 0 auto; 	
-	@include generateBoxSizing;
+.row {
+	max-width: $site-width;
+	min-width: $min-site-width;
+	width: $max-site-width;
+	margin: 0 auto;
+	@include box-sizing(border-box);
 }
 
 /* Nested Rows */
 
-.row .row { 
-	width: auto; 
-	max-width: none; 
-	min-width: 0; 
-	margin: 0  (-$column-spacing); 
+.row .row {
+	width: auto;
+	max-width: none;
+	min-width: 0;
+	margin: 0  (-$column-spacing);
 }
 
-.row:before, .row:after { 
-	content: ""; 
-	display: table; 
+.row:before, .row:after {
+	content: "";
+	display: table;
 	clear: both;
 }
 
@@ -42,20 +31,31 @@
 
 /* Columns */
 
-.columns { 
-	float: left; 
-	min-height: 1px; 
-	padding:0 $column-spacing; 
-	position: relative; 
-	@include generateBoxSizing;	
+.columns {
+	float: left;
+	min-height: 1px;
+	padding:0 $column-spacing;
+	position: relative;
+	@include box-sizing(border-box);
+
+	&.centered{
+		float: none;
+		margin: 0 auto;
+	}
 }
 
-@for $i from 1 through 12{
+@for $i from 1 through $columns{
   .#{convert-number-to-word($i)}, .row .#{convert-number-to-word($i)}{
-    @include generateColumnWidth($i);
+    width: gridCalc($i, $columns);
   }
 }
 
+// Creating .row .push-# classes
+
+@for $i from 2 through $columns - 2 {
+  .push-#{convert-number-to-word($i)} { left: gridCalc($i, $columns); }
+  .pull-#{convert-number-to-word($i)} { right: gridCalc($i, $columns); }
+}
 
 /* Content */
 
@@ -64,19 +64,21 @@ img, object, embed { max-width: 100%; height: auto; }
 /* Mobile */
 
 @include respond-to(mobile) {
-	
+
 	.row {
 		width: 100%;
 		min-width: 0;
 		margin-left: 0;
-		margin-right: 0;		
+		margin-right: 0;
 	}
-	
+
 	.columns, .row .columns {
 		width: auto;
 		float: none;
 		margin-left: 0;
 		margin-right: 0;
-		padding-bottom:$column-spacing;		
+		right: auto;
+		left: auto;
+		padding-bottom:$column-spacing;
 	}
 }
