--- a/source/forms.html.erb
+++ b/source/forms.html.erb
@@ -20,7 +20,7 @@ title: Forms
         <option>Select a Value</option>
       </select>
     </dd>
-    
+
     <dt><label>Address</label></dt>
     <dd>
       <input type="text" class="twelve" placeholder="Street" >
@@ -35,20 +35,20 @@ title: Forms
           <input type="text" placeholder="ZIP" >
         </div>
       </div>
-      <textarea placeholder="Message"></textarea>  
+      <textarea placeholder="Message"></textarea>
     </dd>
-    
+
     <dt><label>Select your choice</label></dt>
     <dd>
       <label><input type="checkbox" id=""> Option 1</label>
       <label><input type="checkbox" id=""> Option 2</label>
-      
+
       <label><input type="radio" name="name"> Option 3</label>
       <label><input type="radio" name="name"> Option 4</label>
     </dd>
-    
+
   </dl>
-  
+
   <fieldset>
 
     <legend>Fieldset Name</legend>
@@ -73,13 +73,13 @@ title: Forms
             <input type="text" placeholder="Disabled ZIP" disabled>
           </div>
         </div>
-        <textarea placeholder="Disabled Message" disabled></textarea>  
+        <textarea placeholder="Disabled Message" disabled></textarea>
       </dd>
 
     </dl>
 
   </fieldset>
-  
+
 </form>
 
 
@@ -92,8 +92,8 @@ title: Forms
       <input type="text" placeholder="Standard Input" class="twelve">
     </dd>
   </dl>
-  
-  <dl class="row">  
+
+  <dl class="form row">
     <dt class="columns three"><label>Address</label></dt>
     <dd class="columns nine">
       <input type="text" class="twelve" placeholder="Street" >
@@ -108,10 +108,10 @@ title: Forms
           <input type="text" placeholder="ZIP" >
         </div>
       </div>
-      <textarea placeholder="Message"></textarea>  
+      <textarea placeholder="Message"></textarea>
     </dd>
   </dl>
-  
+
 </form>
 
 
@@ -126,7 +126,7 @@ title: Forms
       <input type="text" placeholder="Standard Input" class="twelve error">
       <label class="error">This field is required</label>
     </dd>
-    
+
     <dt><label>Address</label></dt>
     <dd>
       <input type="text" class="twelve" placeholder="Street" >
@@ -142,8 +142,8 @@ title: Forms
           <input type="text" placeholder="ZIP" >
         </div>
       </div>
-      <textarea placeholder="Message"></textarea>  
+      <textarea placeholder="Message"></textarea>
     </dd>
-    
+
   </dl>
 </form>
