--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,55 +20,69 @@
     <div class="columns two"><div class="content">Col 2</div></div>
     <div class="columns two"><div class="content">Col 2</div></div>
     <div class="columns two"><div class="content">Col 2</div></div>
-    <div class="columns two"><div class="content">Col 2</div></div> 
+    <div class="columns two"><div class="content">Col 2</div></div>
   </div>
 
   <div class="row row-pad row-demo">
     <div class="columns three"><div class="content">Col 3</div></div>
     <div class="columns three"><div class="content">Col 3</div></div>
     <div class="columns three"><div class="content">Col 3</div></div>
-    <div class="columns three"><div class="content">Col 3</div></div>    
+    <div class="columns three"><div class="content">Col 3</div></div>
   </div>
 
   <div class="row row-pad row-demo">
     <div class="columns four"><div class="content">Col 4</div></div>
     <div class="columns four"><div class="content">Col 4</div></div>
-    <div class="columns four"><div class="content">Col 4</div></div>    
+    <div class="columns four"><div class="content">Col 4</div></div>
   </div>
 
   <div class="row row-pad row-demo">
     <div class="columns one"><div class="content">Col 1</div></div>
-    <div class="columns eleven"><div class="content">Col 11</div></div>    
+    <div class="columns eleven"><div class="content">Col 11</div></div>
   </div>
 
   <div class="row row-pad row-demo">
     <div class="columns two"><div class="content">Col 2</div></div>
-    <div class="columns ten"><div class="content">Col 10</div></div>    
+    <div class="columns ten"><div class="content">Col 10</div></div>
   </div>
 
   <div class="row row-pad row-demo">
     <div class="columns three"><div class="content">Col 3</div></div>
-    <div class="columns nine"><div class="content">Col 9</div></div>    
+    <div class="columns nine"><div class="content">Col 9</div></div>
   </div>
   <div class="row row-pad row-demo">
     <div class="columns four"><div class="content">Col 4</div></div>
-    <div class="columns eight"><div class="content">Col 8</div></div>    
+    <div class="columns eight"><div class="content">Col 8</div></div>
+  </div>
+
+  <div class="row row-pad row-demo">
+    <div class="columns five centered"><div class="content">Centered Col 5</div></div>
   </div>
 
   <div class="row row-pad row-demo">
     <div class="columns five"><div class="content">Col 5</div></div>
-    <div class="columns seven"><div class="content">Col 7</div></div>    
+    <div class="columns seven"><div class="content">Col 7</div></div>
   </div>
 
   <div class="row row-pad row-demo">
     <div class="columns six"><div class="content">Col 6</div></div>
-    <div class="columns six"><div class="content">Col 6</div></div>    
+    <div class="columns six"><div class="content">Col 6</div></div>
   </div>
 
   <div class="row row-pad row-demo">
     <div class="columns twelve"><div class="content">Col 12</div></div>
   </div>
 
+  <div class="row row-pad">
+    <div class="twelve columns">
+      <h2>Pushing/Pulling Columns</h2>
+    </div>
+  </div>
+
+  <div class="row row-pad row-demo">
+    <div class="columns six push-six"><div class="content">Mobile 1st Row</div></div>
+    <div class="columns six pull-six"><div class="content">Mobile 2nd Row</div></div>
+  </div>
 
   <div class="row row-pad">
     <div class="twelve columns">
@@ -135,5 +149,5 @@
       </div>
     </div>
   </div>
-  
+
 <!--  <script src="https://gist.github.com/2951087.js?file=f3-grid.html"></script>-->
