--- a/source/assets/sass/patterns/_variables.scss
+++ b/source/assets/sass/patterns/_variables.scss
@@ -14,6 +14,7 @@ $body-background: #fff;
 // Typography
 
 $ratio: golden();
+$text-direction: ltr;
 $base-color: #333;
 $base-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
 $base-font-size: 13px;
@@ -57,7 +58,7 @@ $input-shadow-color: rgba(0, 0, 0, 0.1);
 $input-border-radius: 2px;
 $input-padding: 5px;
 $form-margin:12px; // Bottom Margin for input, textarea and select elements
-$bool-add-input-shadow: true;
+$add-input-shadow: true;
 
   // Error
 
@@ -69,7 +70,3 @@ $table-padding: 8px 10px;
 $table-cell-border-color: #ddd;
 $table-hover-color: #feffc2;
 $table-zebra-color: #f9f9f9;
-
-
-// Buttons
-
