--- a/source/assets/sass/patterns/_variables.scss
+++ b/source/assets/sass/patterns/_variables.scss
@@ -32,11 +32,13 @@ $base-margin: 1.5em;
   $h6-color: $base-color;
 
   $header-font-weight: bold;
+  $header-font-family: $base-font-family;
 
   // Modular Scale
 
+  $min-font-size: 1em;
   $max-font-size:40px;
-  $base-size: 1em $max-font-size/$base-font-size * 1em; // For Modular Scale
+  $base-size: $min-font-size $max-font-size/$base-font-size * 1em; // For Modular Scale
 
   // Links
 
